# video_stream

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile-client  Dockerfile-server  Makefile  README.md  Vagrantfile  ansible.cfg  camera.sh  client.cc  client.sh  create-vm.yml  docker-compose.yml  server.cc  server.sh  stream_script.sh
client/: CMakeLists.txt  Dockerfile  client.cc  docker-compose.yml
client/cmake/Modules/: FindWiringPi.cmake
protobuf/: .CMakeLists.txt.un~  .messages.proto.un~  CMakeLists.txt  CMakeLists.txt~  messages.proto  messages.proto~
roles/clion/defaults/: main.yml
roles/clion/tasks/: clion.yml  main.yml
roles/docker/defaults/: main.yml
roles/docker/tasks/: main.yml
roles/make/defaults/: main.yml
roles/make/tasks/: main.yml
roles/protobuf/defaults/: main.yml
roles/protobuf/tasks/: main.yml  protobuf.yml
roles/wiringPi/defaults/: main.yml
roles/wiringPi/handlers/: main.yml
roles/wiringPi/tasks/: main.yml
roles/zmq/defaults/: main.yml
roles/zmq/tasks/: main.yml  zmq.yml
scripts/: camera.sh  gstream_pi.sh  gstream_ubuntu.sh  server.sh  test_gstream.sh
server/: CMakeLists.txt  Dockerfile  docker-compose.yml  server.cc
